[package]
name = "auto-gate"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["fs", "macros", "rt-multi-thread", "io-util", "sync"] }
thirtyfour = "0.28"
serde = "1.0"
serde_json = "1.0"