[package]
name = "auto-gate"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "1.1"
tokio = { version = "1", features = ["fs", "macros", "rt-multi-thread", "io-util", "sync"] }
thirtyfour = "0.28"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"